--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="container" style="padding: 5px;">
         <h1>Aciso - ISO HUB</h1>
-        
+
 
         <script src="" async defer></script>
         <!-- Bootstrap scripts -->
@@ -61,40 +61,31 @@
             <div class="row">
 
                 <div class="col">
-                    <a href=""><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/AlmaLinux_Icon_Logo.svg/48px-AlmaLinux_Icon_Logo.svg.png"
-                            alt="AlmaLinux" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/almalinux.webp" alt="AlmaLinux" width="100" height="100">
                         <h3>AlmaLinux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Archlinux-icon-crystal-64.svg/1200px-Archlinux-icon-crystal-64.svg.png"
-                            alt="Arch Linux" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/archlinux.webp" alt="Arch Linux" width="100" height="100">
                         <h3>Arch Linux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/AsahiLinux_logo_svg.svg/1200px-AsahiLinux_logo_svg.svg.png"
-                            alt="Asahi Linux" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/asahilinux.webp" alt="Asahi Linux" width="100" height="100">
                         <h3>Asahi Linux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="https://seeklogo.com/images/C/centos-logo-494F57D973-seeklogo.com.png"
-                            alt="CentOS Linux" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/centos.webp" alt=" CentOS Linux" width="100" height="100">
                         <h3>CentOS Linux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img
-                            src="https://clearlinux.org/modules/custom/clearlinux_org/themes/clearlinux_theme/clear_linux_logo.svg"
-                            alt="Clear Linux" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/clearlinux.webp" alt="Clear Linux" width="100" height="100">
                         <h3>Clear Linux</h3>
                     </a>
                 </div>
@@ -104,39 +95,31 @@
             <div class="row">
 
                 <div class="col">
-                    <a href=""><img
-                            src="https://yt3.ggpht.com/ytc/AMLnZu81__4aRCZiAKzQtqnDBHKW4dRnWIcJMcBAqgyOkg=s900-c-k-c0x00ffffff-no-rj"
-                            alt="CloudLinux" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/cloudlinux.webp" alt="CloudLinux" width="100" height="100">
                         <h3>CloudLinux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="https://www.debian.org/Pics/debian-logo-1024x576.png" alt="Debian" width=""
-                            height="100">
+                    <a href=""><img src="/assets/img/os/debian.webp" alt="Debian" width="" height="100">
                         <h3>Debian</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="https://avatars.githubusercontent.com/u/1978534?s=400&v=4" alt="Elementary OS"
-                            width="100" height="100">
+                    <a href=""><img src="/assets/img/os/elementaryos.webp" alt="Elementary OS" width="100" height="100">
                         <h3>Elementary OS</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Fedora_logo.svg/2048px-Fedora_logo.svg.png"
-                            alt="Fedora" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/fedora.webp" alt="Fedora" width="100" height="100">
                         <h3>Fedora</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Gentoo_Linux_logo_matte.svg/1956px-Gentoo_Linux_logo_matte.svg.png"
-                            alt="Gentoo" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/gentoo.webp" alt="Gentoo" width="100" height="100">
                         <h3>Gentoo</h3>
                     </a>
                 </div>
@@ -144,45 +127,38 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a href=""><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Linux_Mint_logo_without_wordmark.svg/1200px-Linux_Mint_logo_without_wordmark.svg.png"
-                            alt="Linux Mint" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/linuxmint.webp" alt="Linux Mint" width="100" height="100">
                         <h3>Linux Mint</h3>
                     </a>
                 </div>
                 <div class="col">
-                    <a href=""><img src="https://www.linux-shop.info/media/image/57/32/d9/Mageia_logo.png" alt="Mageia"
-                            width="100" height="100">
+                    <a href=""><img src="/assets/img/os/mageia.webp" alt="Mageia" width="100" height="100">
                         <h3>Mageia</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Manjaro-logo.svg/2048px-Manjaro-logo.svg.png"
-                            alt="Manjaro" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/manjaro.webp" alt="Manjaro" width="100" height="100">
                         <h3>Manjaro</h3>
                     </a>
                 </div>
 
 
                 <div class="col">
-                    <a href=""><img src="https://en.opensuse.org/images/c/cd/Button-colour.png" alt="OpenSUSE"
-                            width="100" height="100">
+                    <a href=""><img src="/assets/img/os/opensuse.webp" alt="OpenSUSE" width="100" height="100">
                         <h3>OpenSUSE</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href="content/ubuntu/index.html"><img src="https://assets.ubuntu.com/v1/29985a98-ubuntu-logo32.png" alt="Ubuntu"
+                    <a href="content/ubuntu/index.html"><img src="/assets/img/os/ubuntu-logo32.webp" alt="Ubuntu"
                             width="100" height="100">
                         <h3>Ubuntu</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Zorin_Logomark.svg"
-                            alt="Zorin OS" width="100" height="100">
+                    <a href=""><img src="/assets/img/os/zorin.webp" alt="Zorin OS" width="100" height="100">
                         <h3>Zorin OS</h3>
                     </a>
                 </div>
