--- a/content/ubuntu/index.html
+++ b/content/ubuntu/index.html
@@ -11,7 +11,7 @@
     <title>Ubuntu</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../../main.css">
+    <link rel="stylesheet" href="../../assets/css/main.css">
 </head>
 
 <body>
