--- a/index.html
+++ b/index.html
@@ -61,31 +61,31 @@
             <div class="row">
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/almalinux.webp" alt="AlmaLinux" width="100" height="100">
+                    <a href=""><img src="assets/img/os/almalinux.webp" alt="AlmaLinux" width="100" height="100">
                         <h3>AlmaLinux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/archlinux.webp" alt="Arch Linux" width="100" height="100">
+                    <a href=""><img src="assets/img/os/archlinux.webp" alt="Arch Linux" width="100" height="100">
                         <h3>Arch Linux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/asahilinux.webp" alt="Asahi Linux" width="100" height="100">
+                    <a href=""><img src="assets/img/os/asahilinux.webp" alt="Asahi Linux" width="100" height="100">
                         <h3>Asahi Linux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/centos.webp" alt=" CentOS Linux" width="100" height="100">
+                    <a href=""><img src="assets/img/os/centos.webp" alt=" CentOS Linux" width="100" height="100">
                         <h3>CentOS Linux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/clearlinux.webp" alt="Clear Linux" width="100" height="100">
+                    <a href=""><img src="assets/img/os/clearlinux.webp" alt="Clear Linux" width="100" height="100">
                         <h3>Clear Linux</h3>
                     </a>
                 </div>
@@ -95,31 +95,31 @@
             <div class="row">
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/cloudlinux.webp" alt="CloudLinux" width="100" height="100">
+                    <a href=""><img src="assets/img/os/cloudlinux.webp" alt="CloudLinux" width="100" height="100">
                         <h3>CloudLinux</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/debian.webp" alt="Debian" width="" height="100">
+                    <a href=""><img src="assets/img/os/debian.webp" alt="Debian" width="" height="100">
                         <h3>Debian</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/elementaryos.webp" alt="Elementary OS" width="100" height="100">
+                    <a href=""><img src="assets/img/os/elementaryos.webp" alt="Elementary OS" width="100" height="100">
                         <h3>Elementary OS</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/fedora.webp" alt="Fedora" width="100" height="100">
+                    <a href=""><img src="assets/img/os/fedora.webp" alt="Fedora" width="100" height="100">
                         <h3>Fedora</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/gentoo.webp" alt="Gentoo" width="100" height="100">
+                    <a href=""><img src="assets/img/os/gentoo.webp" alt="Gentoo" width="100" height="100">
                         <h3>Gentoo</h3>
                     </a>
                 </div>
@@ -127,38 +127,38 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/linuxmint.webp" alt="Linux Mint" width="100" height="100">
+                    <a href=""><img src="assets/img/os/linuxmint.webp" alt="Linux Mint" width="100" height="100">
                         <h3>Linux Mint</h3>
                     </a>
                 </div>
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/mageia.webp" alt="Mageia" width="100" height="100">
+                    <a href=""><img src="assets/img/os/mageia.webp" alt="Mageia" width="100" height="100">
                         <h3>Mageia</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/manjaro.webp" alt="Manjaro" width="100" height="100">
+                    <a href=""><img src="assets/img/os/manjaro.webp" alt="Manjaro" width="100" height="100">
                         <h3>Manjaro</h3>
                     </a>
                 </div>
 
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/opensuse.webp" alt="OpenSUSE" width="100" height="100">
+                    <a href=""><img src="assets/img/os/opensuse.webp" alt="OpenSUSE" width="100" height="100">
                         <h3>OpenSUSE</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href="content/ubuntu/index.html"><img src="/assets/img/os/ubuntu-logo32.webp" alt="Ubuntu"
+                    <a href="content/ubuntu/index.html"><img src="assets/img/os/ubuntu-logo32.webp" alt="Ubuntu"
                             width="100" height="100">
                         <h3>Ubuntu</h3>
                     </a>
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="/assets/img/os/zorin.webp" alt="Zorin OS" width="100" height="100">
+                    <a href=""><img src="assets/img/os/zorin.webp" alt="Zorin OS" width="100" height="100">
                         <h3>Zorin OS</h3>
                     </a>
                 </div>
