--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="col">
-                    <a href=""><img src="assets/img/os/archlinux.webp" alt="Arch Linux" width="100" height="100">
+                    <a href="https://archive.archlinux.org/iso/"><img src="assets/img/os/archlinux.webp" alt="Arch Linux" width="100" height="100">
                         <h3>Arch Linux</h3>
                     </a>
                 </div>
